k8s/manifests/test-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
  - name: nginx
    image: nginx:1.25
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
  - name: netshoot
    image: nicolaka/netshoot
    command: ["/bin/sh", "-c", "sleep 3600"]

---
apiVersion: v1
kind: Pod
metadata:
  name: internal-frontend
  labels:
    company: thecompany
    tier: internal
    app: frontend
spec:
  containers:
  - name: netshoot
    image: nicolaka/netshoot
    command: ["/bin/sh", "-c", "sleep 3600"]

---
apiVersion: v1
kind: Pod
metadata:
  name: hacker
  labels:
    app: hacker
spec:
  containers:
  - name: netshoot
    image: nicolaka/netshoot
    command: ["/bin/sh", "-c", "sleep 3600"]
